--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta
-      property="og:image"
-      content="https://www.google.com/url?sa=i&url=https%3A%2F%2F42payapp.com%2F&psig=AOvVaw12oeiNm1wk9Z5co24L6QJ5&ust=1695992530591000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCPDg39SuzYEDFQAAAAAdAAAAABAD"
-    />
+    <meta property="og:image" content="https://42payapp.com/assets/brand.png" />
     <meta property="og:image:width" content="1037" />
     <meta property="og:image:height" content="619" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
