--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta property="og:image" content="https://42payapp.com/assets/brand.png" />
+    <meta property="og:image" content="https://i.imgur.com/gNsn2EA.png" />
     <meta property="og:image:width" content="1037" />
-    <meta property="og:image:height" content="619" />
+    <meta property="og:image:height" content="876" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
