--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,11 @@
     <meta property="og:image" content="https://i.imgur.com/gNsn2EA.png" />
     <meta property="og:image:width" content="1037" />
     <meta property="og:image:height" content="876" />
+    <meta property="og:url" content="https://42payapp.com/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="privacy policies" />
+    <meta property="og:description" content="Descripción de tu página" />
+    <meta property="fb:app_id" content="405249547757595" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
